add css grid and content, add Big Desktop breakpoint with mega-header

--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
         <div class="weather">
           <div class="lottie">
             <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_wIcwHL.json"  background="transparent"  speed="0.2"  style="width: 50px; height: 40px;"  loop  autoplay></lottie-player>
+            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_wIcwHL.json"  background="transparent"  speed="0.4"  style="width: 50px; height: 40px;"  loop  autoplay></lottie-player>
           </div>
           <div class="weather-text">
             Snowy, –10°C
@@ -88,22 +88,29 @@
         <div id="icon-container"></div>
       </section>
       <section class="top-news">
-        <div class="optional text">
-          <h3>
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
-          </h3>
-          <p class="small">
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
-          </p>
+        <div class="mega-header">
+          <h1>
+            Stop looking for unicorns. We’ve got the next big thing.
+          </h1>
         </div>
-        <div class="image">
-          <img src="./resources/dorothea-oldani-Hhm_fL04bE8-unsplash.jpg" alt="image of a kitten">
-        </div>
-        <div class="text">
-          <h1>Stop looking for unicorns. We’ve got the next big thing.</h1>
-          <p>Every tech company is struggling with the same issue – there are not enough developers to meet their growth. Most companies are looking for the same type of person, with the same background and the same boxes to tick.</p>
-          <p>We have around 60 junior frontend developers that have gone through our proven training program. At first glance, they might not fit your standard profile. However, we know that you will not only be wowed by their tech skills, they will deliver and bring new perspectives to your team. Previous students are currently working as frontend developers at companies like Dagens Nyheter, H&M, SeenThis, Comprend, Will&Skill, Mojang, TUI, Instabox and more.</p>
-        </div>
+        <div class="container">
+          <div class="optional text">
+            <h3>
+              Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
+            </h3>
+            <p class="small">
+              Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
+            </p>
+          </div>
+          <div class="image">
+            <img src="./resources/dorothea-oldani-Hhm_fL04bE8-unsplash.jpg" alt="image of a kitten">
+          </div>
+          <div class="text">
+            <h1>Stop looking for unicorns. We’ve got the next big thing.</h1>
+            <p>Every tech company is struggling with the same issue – there are not enough developers to meet their growth. Most companies are looking for the same type of person, with the same background and the same boxes to tick.</p>
+            <p>We have around 60 junior frontend developers that have gone through our proven training program. At first glance, they might not fit your standard profile. However, we know that you will not only be wowed by their tech skills, they will deliver and bring new perspectives to your team. Previous students are currently working as frontend developers at companies like Dagens Nyheter, H&M, SeenThis, Comprend, Will&Skill, Mojang, TUI, Instabox and more.</p>
+          </div>
+      </div>
       </section>
       <div class="divider"></div>
       <section class="full-length-news">
@@ -173,8 +180,113 @@
           </p>
         </div> -->
       </section>
-      <section class="grid-news">
-        <div                                                                                                                                                    ></div>
+      <div class="divider"></div>
+      <section class="grid-outer">    
+        <div class="grid-inner left">
+          <div class="item">
+            <h2>
+              Douglas George Grimston (May 18, 1900 – September 14, 1955) was a Canadian ice hockey administrator who served as president of the Canadian Amateur Hockey Association (CAHA) from 1950 to 1952.
+            </h2>
+            <p> 
+              He oversaw the establishment of the Major Series for the Alexander Cup and implemented a new deal for player contracts in senior ice hockey, in response to the Allan Cup championship being dominated by a small group of teams who sought to protect themselves from professional leagues recruiting their players. He opposed the National Hockey League wanting its junior ice hockey prospect players on stronger teams, which led to limits on the transfer of players to keep balanced competition for the Memorial Cup. After the 1952 Winter Olympics where the Canada men's national ice hockey team won the gold medal, Grimston recommended withdrawal from Olympic hockey since European nations would never agree to ice hockey rules which allowed physical play. Grimston later accused International Ice Hockey Federation vice-president Bunny Ahearne of financially exploiting of the Edmonton Mercurys on a European tour, which led to a physical altercation between them.
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              The Fraser River /ˈfreɪzər/ is the longest river within British Columbia, Canada
+            </h2>
+            <p> 
+              Rising at Fraser Pass near Blackrock Mountain in the Rocky Mountains and flowing for 1,375 kilometres (854 mi), into the Strait of Georgia at the city of Vancouver.[5][9] It is the 11th longest river in Canada
+            </p>
+
+          </div>
+          <div class="item">
+            <h2>
+              Sturgeon is the common name for the 27 species of fish belonging to the family Acipenseridae.
+            </h2>
+            <p> 
+              The earliest sturgeon fossils date to the Late Cretaceous, and are descended from other, earlier acipenseriform fish who date back to the Triassic period some 245 to 208 million years ago.[2] The family is grouped into four genera: Acipenser, Huso, Scaphirhynchus and Pseudoscaphirhynchus. Four species may now be extinct.[3] Two closely related species
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              New Westminster is a city in the Lower Mainland region of British Columbia, Canada, and a member municipality of Metro Vancouver            
+            </h2>
+            <p> 
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century.
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              Paddlefish (family Polyodontidae) are basal Chondrostean ray-finned fish.
+            </h2>
+            <p> 
+              They have been referred to as "primitive fish" because they have evolved with few morphological changes since the earliest fossil records of the Early Cretaceous, 120 to 125 million years ago.[3] Polyodontids are almost exclusively North American and Chinese, both extant and in the fossil record.[4]
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              Overfishing is the removal of a species of fish from a body of water at a rate that the species cannot replenish
+            </h2>
+            <p> 
+              resulting in those species becoming underpopulated in that area. In a Food and Agriculture Organization of the United Nations 2018 report, the FAO estimates that one-third of world fish stocks were overfished by 2015.[1] Over 30 billion euros in public subsidies are directed to fisheries annually.[2][3]
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              Regime shifts are large, abrupt, persistent changes in the structure and function of ecosystems, the climate, financial systems or other complex systems.
+            </h2>
+            <p> 
+              A regime is a characteristic behaviour of a system which is maintained by mutually reinforced processes or feedbacks. Regimes are considered persistent relative to the time period over which the shift occurs.
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              In mathematics, a dynamical system is a system in which a function describes the time dependence of a point in a geometrical space
+            </h2>
+            <p> 
+              Examples include the mathematical models that describe the swinging of a clock pendulum, the flow of water in a pipe, and the number of fish each springtime in a lake
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              Paddlefish (family Polyodontidae) are basal Chondrostean ray-finned fish.
+            </h2>
+            <p> 
+              They have been referred to as "primitive fish" because they have evolved with few morphological changes since the earliest fossil records of the Early Cretaceous, 120 to 125 million years ago.[3] Polyodontids are almost exclusively North American and Chinese, both extant and in the fossil record.[4]
+            </p>
+          </div>
+        </div>
+        <div class="grid-inner right">
+          <div class="item">
+            <h2>
+              New Westminster is a city in the Lower Mainland region of British Columbia, Canada, and a member municipality of Metro Vancouver            
+            </h2>
+            <p> 
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century.
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century.
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century.
+
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              New Westminster is a city in the Lower Mainland region of British Columbia, Canada, and a member municipality of Metro Vancouver            
+            </h2>
+            <p> 
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century.
+            </p>
+          </div>
+          <div class="item">
+            <h2>
+              New Westminster is a city in the Lower Mainland region of British Columbia, Canada, and a member municipality of Metro Vancouver            
+            </h2>
+            <p> 
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century. 
+              It was founded by Major-General Richard Moody as the capital of the new-born Colony of British Columbia in 1858, and continued in that role until the Mainland and Island Colonies were merged in 1866, and was the Mainland's largest city from that year until it was passed in population by Vancouver during the first decade of the 20th century.
+            </p>
+          </div>
+        </div>
       </section>
       <div class="divider"></div>
     </main>
