Added styling and animation to hamburger menu and general adjustments to the styling

--- a/code/index.html
+++ b/code/index.html
@@ -8,74 +8,113 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
   </head>
+  
   <body>
-
     <header class="header">
-        <img class="logo" src="./star.svg" alt="Alva logo"> 
+      <a href="#">
+        <img class="logo" src="./circle.svg" alt="Alva logo">
+      </a> 
+      <a class="title" href="#">
         <h1>ALVA</h1>
-        <nav class="navigation"> 
-          <a href="#">About</a>
-          <a href="#">Archive</a>
-          <a href="#">Contact</a>
-        </nav>
-        <div class="hamburger">
+      </a>
+      <nav class="navigation"> 
+        <a href="#">About</a>
+        <a href="#">Archive</a>
+        <a href="#">Contact</a>
+      </nav>
+      
+      <button class="ham">
+        <div class="hamburger"> 
           <div></div>
           <div></div>
           <div></div>
         </div>
-        <div class="social-media">
-          <a href="#"><img src="./facebook.svg" alt="Facebook" target="_blank"></a> <!-- maybe ut a class in each of these to regulate the space between them? -->
-          <a href="#"><img src="./instagram.svg" alt="Instagram" target="_blank"></a>
-          <a href="#"><img src="./youtube.svg" alt="Youtube" target="_blank"></a>
-        </div>
+      </button>
+      <div class="social-media">      <!-- maybe put a class in each of these to regulate the space between them? -->
+        <a href="#" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
+            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+          </svg></a> 
+        <a href="#" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+          </svg></a>
+        <a href="#" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
+            <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
+            <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+          </svg></a>
+      </div>
     </header>
 
-    <main>
-      <section class="big-news">
-        <section class="container">
-          <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> 
-          <div class="big-news-text">
-            <h2>Looking back</h2>
-            <p>"2020 - Year of the dog"</p>
-          </div>
+    <div class="background-image">
+      <main>
+        <section class="big-news">
+          <section class="container">
+            <a href="#">
+              <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> 
+              <div class="big-news-text">
+                <h2>Looking back</h2>
+                <p>'2020 - Year of the dog'</p>
+              </div>
+            </a>
+          </section>
         </section>
-      </section>
 
-      <section class="other-news">
-        <section class="container">
-            <img class="responsive-image" src="./alva-dot.jpg" alt="Alva in the woods"> 
-            <h3>"A casual stroll in the woods"</h3>
+        <section class="other-news">
+          <section class="container">
+            <a href="#">
+              <img class="responsive-image" src="./alva-dot.jpg" alt="Alva in the woods"> 
+              <h3>'A casual stroll in the woods'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">
+              <img class="responsive-image" src="./alva-field.jpg" alt="Alva on a field"> 
+              <h3>'Endless possibilities - a philosophical story'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">  
+              <img class="responsive-image" src="./alva-flamingo.jpg" alt="Alva with Flamingo toy"> 
+              <h3>'How to destroy a toy in 10 seconds'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">  
+              <img class="responsive-image" src="./alva-grass.jpg" alt="Alva lying in the grass"> 
+              <h3>'Nothing beats the feeling of grass'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">  
+              <img class="responsive-image" src="./alva-tongue-out.jpg" alt="Alva with her tongue out"> 
+              <h3>'The road to happiness'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">  
+              <img class="responsive-image" src="./alva-woods.jpg" alt="Alva in the woods"> 
+              <h3>'That time I almost choked on a stick'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">  
+              <img class="responsive-image" src="./alva-snowball.jpg" alt="Alva on a big snowball"> 
+              <h3>'How I became the Queen of everything'</h3>
+            </a>
+          </section>
+          <section class="container">
+            <a href="#">  
+              <img class="responsive-image" src="./alva-sofa.jpg" alt="Alva on the sofa"> 
+              <h3>'How to relax 101'</h3>
+            </a>
+          </section>
         </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-field.jpg" alt="Alva on a field"> 
-            <h3>"Endless possibilities - a philosophical story"</h3>
-        </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-flamingo.jpg" alt="Alva with Flamingo toy"> 
-            <h3>"How to destroy a toy in 10 seconds"</h3>
-        </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-grass.jpg" alt="Alva lying in the grass"> 
-            <h3>"Nothing beats the feeling of grass"</h3>
-        </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-tongue-out.jpg" alt="Alva with her tongue out"> 
-            <h3>"The road to happiness"</h3>
-        </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-woods.jpg" alt="Alva in the woods"> 
-            <h3>"That time I almost choked on a stick"</h3>
-        </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-snowball.jpg" alt="Alva on a big snowball"> 
-            <h3>"How I became the Queen of everything"</h3>
-        </section>
-        <section class="container">
-            <img class="responsive-image" src="./alva-sofa.jpg" alt="Alva on the sofa"> 
-              <h3>"How to relax"</h3>
-        </section>
-      </section>
-    </main>
+      </main>
+    </div>
 
     <footer>
       <div class="container-footer">
@@ -85,20 +124,44 @@
           <a href="#">Contact</a>
         </div>
         <div class="container-social-media">
-          <a href="#">
-            <img src="./facebook.svg" alt="Facebook" target="_blank"> 
+          <a href="#" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
+              <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+            </svg>
             Facebook
           </a>
-          <a href="#">
-            <img src="./instagram.svg" alt="Instagram" target="_blank"> 
+          <a href="#" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+              <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+              <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+              <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+            </svg> 
             Instagram 
           </a>
-          <a href="#">
-            <img src="./youtube.svg" alt="Youtube" target="_blank"> 
+          <a href="#" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
+              <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
+              <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+            </svg> 
             Youtube 
           </a>
         </div>
       </div>
     </footer>
+
+  <script>
+    const navigation = document.querySelector(".navigation")
+    const hamburger = document.querySelector(".hamburger")
+
+    hamburger.addEventListener("click", toggleHamburger)
+
+    function toggleHamburger(){
+      navigation.classList.toggle("open-menu")
+      hamburger.classList.toggle("close-menu")
+    }
+  </script>
+
   </body>
+
 </html>
+
