--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,8 @@
 
     <div class="container">
 
-      
+      <div class="header-container">
+
       <header class="header">
 
 
@@ -46,6 +47,8 @@
         
 
       </header>
+
+    </div>
 
       <section class="big-news">
         <!-- The big news content -->
