--- a/code/index.html
+++ b/code/index.html
@@ -27,7 +27,10 @@
     <section class="big-news container">
       <div class="news-card">
         <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1524289286702-f07229da36f5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
-        <div class="big-news-text">Lorem Ipsum</div> 
+          <div class="big-news-text">
+            <p class="title">Lorem Ipsum</p>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+          </div>
         </div>
       </div>
     </section>
@@ -35,22 +38,34 @@
     <section class="other-news container">
       <div class="news-card">
         <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1523503211343-9bb90cc3cb56?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
-        <div class="big-news-text">Lorem Ipsum</div> 
+          <div class="news-card-text">
+            <p class="title">Lorem Ipsum</p>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="news-card">
         <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-        <div class="big-news-text">Lorem Ipsum</div> 
+        <div class="news-card-text">
+          <p class="title">Lorem Ipsum</p>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
         </div>
       </div>
       <div class="news-card">
         <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1511680059018-e7cc6c0f22c8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-        <div class="big-news-text">Lorem Ipsum</div> 
+          <div class="news-card-text">
+            <p class="title">Lorem Ipsum</p>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="news-card">
         <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1504985954001-5737b2af529e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=779&q=80">
-        <div class="big-news-text">Lorem Ipsum</div> 
+          <div class="news-card-text">
+            <p class="title">Lorem Ipsum</p>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div> 
         </div>
       </div>      
     </section>
