Fixed problem with news-item img not being the same height

--- a/code/index.html
+++ b/code/index.html
@@ -89,7 +89,7 @@
           <img class="news-img" src="images/news4.jpg" alt="Female soccor players cheering on field"/>
           <div class="news-item-text">
             <small>SPORTS</small>
-          <h2 class="news-item-title">Female soccor to get as much funding and screentime as male soccor</h2>
+          <h2 class="news-item-title">Female soccor to get as much screentime as male soccor</h2>
         </div>
         </a>
         </div>
