--- a/code/index.html
+++ b/code/index.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>GOOD NEWS ONLY</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&family=Jacques+Francois+Shadow&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <!-- HEADER -->
     <header>
-      <div class="logo-container"> 
-        <h1 class="logo">GOOD <br>NEWS <br>ONLY</h1>
+      <div class="logo-container">
+        <h1 class="logo">GOOD <br />NEWS <br />ONLY</h1>
         <video class="logo-video" autoplay muted loop>
-          <source src="Images/logo-film.mp4" type="video/mp4">
+          <source src="Images/logo-film.mp4" type="video/mp4" />
         </video>
       </div>
       <nav>
@@ -29,90 +31,141 @@
       </nav>
     </header>
 
-      <!-- MAIN BOX -->
+    <!-- MAIN BOX -->
     <div class="main-box">
       <!-- BIG NEWS -->
-        <section class="big-news">
-        <img class="big-news-img" src="images/bignewsimg.jpg" alt="Crowd celebrating in the streets"/>
+      <section class="big-news">
+        <img
+          class="big-news-img"
+          src="images/bignewsimg.jpg"
+          alt="Crowd celebrating in the streets"
+        />
         <div class="big-news-text">
           <a href="#">
             <small class="big-news-category">TOP STORY</small>
-          <h2>No new Covid-19 cases in over 6 months</h2>
-          <p class="big-news-paragraph">
-            <strong
-              >Crowds celebrating on the streets world wide. Epidemiologist
-              Anders Tegnell: "We are confident that we are now out of the
-              woods."</strong>
-          </p>
-          <p class="more-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in auctor leo, nec rutrum libero. Cras lacinia fermentum rhoncus. Nunc tempus, est in posuere eleifend, odio elit finibus tellus, eget pulvinar neque mi at ligula. Phasellus velit erat, fermentum eu iaculis ac, aliquam ut sapien. Praesent dignissim, dolor id venenatis sollicitudin, nunc tortor viverra turpis, sit amet vulputate ex lacus ac nibh. <br><br>Donec ut mauris sed ante gravida dapibus. Etiam dolor tortor, auctor elementum feugiat vitae, bibendum vel felis. Pellentesque finibus mi ut ex tempor porta.
-
-            Morbi euismod vitae felis vitae malesuada. Phasellus faucibus vehicula gravida. Integer sed interdum nisl, in eleifend ex. Proin ut elit id leo tempus pharetra. Cras varius tellus a aliquam ultricies. Nulla facilisi. Quisque id feugiat tellus. Donec lobortis neque eu ipsum condimentum, eget commodo diam viverra. Pellentesque commodo urna neque, eu consequat magna rhoncus nec. Vivamus luctus dui ac bibendum rutrum. Donec maximus dolor tincidunt eros rutrum sodales. Etiam imperdiet aliquet sem vitae accumsan. Suspendisse placerat suscipit lectus. <br><br>Suspendisse justo ante, varius a cursus ut, consectetur at libero. Sed et justo nec lacus posuere eleifend ut et sem. Duis lobortis est ut elit porta consequat. Curabitur nisi mi, condimentum nec elementum at, bibendum sed massa.</p>
-          <a class="read-more" href="#"><strong>Read more</strong></a>
+            <h2>No new Covid-19 cases in over 6 months</h2>
+            <p class="big-news-paragraph">
+              <strong
+                >Crowds celebrating on the streets world wide. Epidemiologist
+                Anders Tegnell: "We are confident that we are now out of the
+                woods."</strong
+              >
+            </p>
+            <p class="more-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in
+              auctor leo, nec rutrum libero. Cras lacinia fermentum rhoncus.
+              Nunc tempus, est in posuere eleifend, odio elit finibus tellus,
+              eget pulvinar neque mi at ligula. Phasellus velit erat, fermentum
+              eu iaculis ac, aliquam ut sapien. Praesent dignissim, dolor id
+              venenatis sollicitudin, nunc tortor viverra turpis, sit amet
+              vulputate ex lacus ac nibh. <br /><br />Donec ut mauris sed ante
+              gravida dapibus. Etiam dolor tortor, auctor elementum feugiat
+              vitae, bibendum vel felis. Pellentesque finibus mi ut ex tempor
+              porta. Morbi euismod vitae felis vitae malesuada. Phasellus
+              faucibus vehicula gravida. Integer sed interdum nisl, in eleifend
+              ex. Proin ut elit id leo tempus pharetra. Cras varius tellus a
+              aliquam ultricies. Nulla facilisi. Quisque id feugiat tellus.
+              Donec lobortis neque eu ipsum condimentum, eget commodo diam
+              viverra. Pellentesque commodo urna neque, eu consequat magna
+              rhoncus nec. Vivamus luctus dui ac bibendum rutrum. Donec maximus
+              dolor tincidunt eros rutrum sodales. Etiam imperdiet aliquet sem
+              vitae accumsan. Suspendisse placerat suscipit lectus.
+              <br /><br />Suspendisse justo ante, varius a cursus ut,
+              consectetur at libero. Sed et justo nec lacus posuere eleifend ut
+              et sem. Duis lobortis est ut elit porta consequat. Curabitur nisi
+              mi, condimentum nec elementum at, bibendum sed massa.
+            </p>
+            <a class="read-more" href="#"><strong>Read more</strong></a>
           </a>
         </div>
-    </section>
-        <!-- NEWS GROUP -->
+      </section>
+      <!-- NEWS GROUP -->
       <section class="news-group">
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/news1.jpg" alt="Students seated at table" />
-          <div class="news-item-text">
-          <small class="news-category">TECH</small>
-          <h2 class="news-item-title">
-            100% of students from Technigo landed jobs after graduation
-          </h2>
-        </div>
-        </a>
-        </div>
-        <div class="news-item">
-          <a href="#">
-          <img class="news-img" src="images/news2.jpg" alt="Man laying in bed with hangover" />
-          <div class="news-item-text">
-          <small>NEWS</small>
-          <h2 class="news-item-title">
-            Newly developed pill turned out to cure hangovers
-          </h2>
-        </div>
-        </a>
+            <img
+              class="news-img"
+              src="images/news1.jpg"
+              alt="Students seated at table"
+            />
+            <div class="news-item-text">
+              <small class="news-category">TECH</small>
+              <h2 class="news-item-title">
+                100% of students from Technigo landed jobs after graduation
+              </h2>
+            </div>
+          </a>
         </div>
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/news3.png" alt="Dog sitting in front of a laptop" />
-          <div class="news-item-text">
-            <small>NEWS</small>
-          <h2 class="news-item-title">Bringing your dog to work now considered human right</h2>
-        </div>
-        </a>
+            <img
+              class="news-img"
+              src="images/news2.jpg"
+              alt="Man laying in bed with hangover"
+            />
+            <div class="news-item-text">
+              <small>NEWS</small>
+              <h2 class="news-item-title">
+                Newly developed pill turned out to cure hangovers
+              </h2>
+            </div>
+          </a>
         </div>
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/news4.jpg" alt="Female soccor players cheering on field"/>
-          <div class="news-item-text">
-            <small>SPORTS</small>
-          <h2 class="news-item-title">Female soccor to get as much screentime as male soccor</h2>
+            <img
+              class="news-img"
+              src="images/news3.png"
+              alt="Dog sitting in front of a laptop"
+            />
+            <div class="news-item-text">
+              <small>NEWS</small>
+              <h2 class="news-item-title">
+                Bringing your dog to work now considered human right
+              </h2>
+            </div>
+          </a>
         </div>
-        </a>
+        <div class="news-item">
+          <a href="#">
+            <img
+              class="news-img"
+              src="images/news4.jpg"
+              alt="Female soccor players cheering on field"
+            />
+            <div class="news-item-text">
+              <small>SPORTS</small>
+              <h2 class="news-item-title">
+                Female soccor to get as much screentime as male soccor
+              </h2>
+            </div>
+          </a>
         </div>
       </section>
-        <!-- INTERVIEW SECTION -->     
+      <!-- INTERVIEW SECTION -->
       <section class="interview">
         <a href="#">
-        <h1 class="interview-headline">INTERVIEW.</h1>
-        <img class="interview-img" src="Images/free-britney.png" alt="Google search field with the text #FreeBrithey" />
-        <h2 class="interview-quote">
-          Britney about her comeback as a free artist:<br> ”Without the #FreeBritney campaign it would not have been possible”
-        </h2>
-      </a>
+          <h1 class="interview-headline">INTERVIEW.</h1>
+          <img
+            class="interview-img"
+            src="Images/free-britney.png"
+            alt="Google search field with the text #FreeBrithey"
+          />
+          <h2 class="interview-quote">
+            Britney about her comeback as a free artist:<br />
+            ”Without the #FreeBritney campaign it would not have been possible”
+          </h2>
+        </a>
       </section>
     </div>
-<!-- FOOTER -->   
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="link-container">
-      <a class="footer-links" href="#">CONTACT</a>
-      <a class="footer-links" href="#">PRIVACY POLICY</a>
-      <a class="footer-links" href="#">CAREERS</a>
-    </div>
-    <small class="copywrite">&copy 2020 Siri Hemsley</small>
+        <a class="footer-links" href="#">CONTACT</a>
+        <a class="footer-links" href="#">PRIVACY POLICY</a>
+        <a class="footer-links" href="#">CAREERS</a>
+      </div>
+      <small class="copywrite">&copy 2020 Siri Hemsley</small>
     </footer>
   </body>
 </html>
