Updated classes for header

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
+    <header class="header">
       <div class="logo-container">
         <h1 class="logo">GOOD <br />NEWS <br />ONLY</h1>
         <video class="logo-video" autoplay muted loop>
