change media queries to header

--- a/code/index.html
+++ b/code/index.html
@@ -13,9 +13,16 @@
 
   <header class="header">
 
-    <img class="logo" src="./logo.svg" alt="Technigo logo" />
+    <div class="mobile-tablet-view">
+      <img class="logo" src="./logo.svg" alt="Technigo logo" />
+      <h1>FITNESS NEWS</h1>
 
-    <h1>FITNESS NEWS</h1>
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
 
     <nav class="navigation-container">
       <div class="navigation-item"><a href="#">HOME</a></div>
